--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,28 @@
 
 # Compiled S
 *.s
+
+# Generated files
+*.cmake
+*.make
+*.o.d
+*.ts
+*.ninja
+link.txt
+*.ninja_deps
+*.ninja_log
+*.log
+*.json
+city1
+city2
+Makefile
+
+# Ignore all .txt files except CMakeLists.txt in the root folder
+*.txt
+!CMakeLists.txt
+
+# Ignore all files in the build directory
+/build/
+
+# Ignore all files in the CMakeFiles directory
+cmake/CMakeFiles/
